Fixes #670.
Addition of one new extension point (gama.models) and deprecation of
gaml.grammar.addition in favor of gaml.extension. Models can now be
bundled, using the first extension point, inside GAMA plugins.